--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book-Movie-Ticket</title>
+    <title>BookMovie-Ticket</title>
   </head>
   <body>
     <div id="root"></div>
